@@ -41,38 +41,38 @@ product|GPRDPROD
 # the most recent version of data.table
 SAMPLE_DICT <- textConnection('
 code|term|dict|events|medcode|termlc
-"A155"|"Tuberculosis of larynx, trachea and bronchus, confirmed"|"icd10"|"tuberculosis of larynx, trachea and bronchus, confirmed"
-"E282"|"Polycystic ovarian syndrome"|"icd10"|"polycystic ovarian syndrome"
-"I200"|"Unstable angina"|"icd10"|"unstable angina"
-"I201"|"Angina pectoris with documented spasm"|"icd10"|"angina pectoris with documented spasm"
-"I208"|"Other forms of angina pectoris"|"icd10"|"other forms of angina pectoris"
-"I209"|"Angina pectoris, unspecified"|"icd10"|"angina pectoris, unspecified"
-"I210"|"Acute transmural myocardial infarction of anterior wall"|"icd10"|"acute transmural myocardial infarction of anterior wall"
-"I213"|"Acute transmural myocardial infarction of unspecified site"|"icd10"|"acute transmural myocardial infarction of unspecified site"
-"I221"|"Subsequent myocardial infarction of inferior wall"|"icd10"|"subsequent myocardial infarction of inferior wall"
-"I228"|"Subsequent myocardial infarction of other sites"|"icd10"|"subsequent myocardial infarction of other sites"
-"I421"|"Obstructive hypertrophic cardiomyopathy"|"icd10"|"obstructive hypertrophic cardiomyopathy"
-"I422"|"Other hypertrophic cardiomyopathy"|"icd10"|"other hypertrophic cardiomyopathy"
-"I48X"|"Atrial fibrillation and flutter"|"icd10"|"atrial fibrillation and flutter"
-"X050"|"Exposure to ignition or melting of nightwear ;  Home"|"icd10"|"exposure to ignition or melting of nightwear ;  home"
-"X051"|"Exposure to ignition or melting of nightwear ;  Residential institution"|"icd10"|"exposure to ignition or melting of nightwear ;  residential institution"
-"413"|"Angina pectoris"|"icd9"|"angina pectoris"
-"4130"|"Angina pectoris ; Angina decubitus"|"icd9"|"angina pectoris ; angina decubitus"
-"4131"|"Angina pectoris ; Prinzmetal angina"|"icd9"|"angina pectoris ; prinzmetal angina"
-"4139"|"Angina pectoris ; Other and unspecified angina pectoris"|"icd9"|"angina pectoris ; other and unspecified angina pectoris"
-"413"|"Angina pectoris"|"icd9head"|"angina pectoris"
-"A15"|"Respiratory tuberculosis"|"icdhead"|"respiratory tuberculosis"
-"E28"|"Ovarian dysfunction"|"icdhead"|"ovarian dysfunction"
-"I20"|"Angina pectoris"|"icdhead"|"angina pectoris"
-"I21"|"Acute myocardial infarction"|"icdhead"|"acute myocardial infarction"
-"I22"|"Subsequent myocardial infarction"|"icdhead"|"subsequent myocardial infarction"
-"I42"|"Cardiomyopathy"|"icdhead"|"cardiomyopathy"
-"I48"|"Atrial fibrillation and flutter"|"icdhead"|"atrial fibrillation and flutter"
-"X05"|"Exposure to ignition or melting of nightwear"|"icdhead"|"exposure to ignition or melting of nightwear"
-"K621"|"Percutaneous transluminal ablation of pulmonary vein to left atrium conducting system"|"opcs"|"percutaneous transluminal ablation of pulmonary vein to left atrium conducting system"
-"K622"|"Percutaneous transluminal ablation of atrial wall for atrial flutter"|"opcs"|"percutaneous transluminal ablation of atrial wall for atrial flutter"
-"K623"|"Percutaneous transluminal ablation of conducting system of heart for atrial flutter NEC"|"opcs"|"percutaneous transluminal ablation of conducting system of heart for atrial flutter nec"
-"Q494"|"Endoscopic drilling of ovary"|"opcs"|"endoscopic drilling of ovary"
+"A155"|"Tuberculosis of larynx, trachea and bronchus, confirmed"|"icd10"|NA|NA|"tuberculosis of larynx, trachea and bronchus, confirmed"
+"E282"|"Polycystic ovarian syndrome"|"icd10"|NA|NA|"polycystic ovarian syndrome"
+"I200"|"Unstable angina"|"icd10"|NA|NA|"unstable angina"
+"I201"|"Angina pectoris with documented spasm"|"icd10"|NA|NA|"angina pectoris with documented spasm"
+"I208"|"Other forms of angina pectoris"|"icd10"|NA|NA|"other forms of angina pectoris"
+"I209"|"Angina pectoris, unspecified"|"icd10"|NA|NA|"angina pectoris, unspecified"
+"I210"|"Acute transmural myocardial infarction of anterior wall"|"icd10"|NA|NA|"acute transmural myocardial infarction of anterior wall"
+"I213"|"Acute transmural myocardial infarction of unspecified site"|"icd10"|NA|NA|"acute transmural myocardial infarction of unspecified site"
+"I221"|"Subsequent myocardial infarction of inferior wall"|"icd10"|NA|NA|"subsequent myocardial infarction of inferior wall"
+"I228"|"Subsequent myocardial infarction of other sites"|"icd10"|NA|NA|"subsequent myocardial infarction of other sites"
+"I421"|"Obstructive hypertrophic cardiomyopathy"|"icd10"|NA|NA|"obstructive hypertrophic cardiomyopathy"
+"I422"|"Other hypertrophic cardiomyopathy"|"icd10"|NA|NA|"other hypertrophic cardiomyopathy"
+"I48X"|"Atrial fibrillation and flutter"|"icd10"|NA|NA|"atrial fibrillation and flutter"
+"X050"|"Exposure to ignition or melting of nightwear ;  Home"|"icd10"|NA|NA|"exposure to ignition or melting of nightwear ;  home"
+"X051"|"Exposure to ignition or melting of nightwear ;  Residential institution"|"icd10"|NA|NA|"exposure to ignition or melting of nightwear ;  residential institution"
+"413"|"Angina pectoris"|"icd9"|NA|NA|"angina pectoris"
+"4130"|"Angina pectoris ; Angina decubitus"|"icd9"|NA|NA|"angina pectoris ; angina decubitus"
+"4131"|"Angina pectoris ; Prinzmetal angina"|"icd9"|NA|NA|"angina pectoris ; prinzmetal angina"
+"4139"|"Angina pectoris ; Other and unspecified angina pectoris"|"icd9"|NA|NA|"angina pectoris ; other and unspecified angina pectoris"
+"413"|"Angina pectoris"|"icd9head"|NA|NA|"angina pectoris"
+"A15"|"Respiratory tuberculosis"|"icdhead"|NA|NA|"respiratory tuberculosis"
+"E28"|"Ovarian dysfunction"|"icdhead"|NA|NA|"ovarian dysfunction"
+"I20"|"Angina pectoris"|"icdhead"|NA|NA|"angina pectoris"
+"I21"|"Acute myocardial infarction"|"icdhead"|NA|NA|"acute myocardial infarction"
+"I22"|"Subsequent myocardial infarction"|"icdhead"|NA|NA|"subsequent myocardial infarction"
+"I42"|"Cardiomyopathy"|"icdhead"|NA|NA|"cardiomyopathy"
+"I48"|"Atrial fibrillation and flutter"|"icdhead"|NA|NA|"atrial fibrillation and flutter"
+"X05"|"Exposure to ignition or melting of nightwear"|"icdhead"|NA|NA|"exposure to ignition or melting of nightwear"
+"K621"|"Percutaneous transluminal ablation of pulmonary vein to left atrium conducting system"|"opcs"|NA|NA|"percutaneous transluminal ablation of pulmonary vein to left atrium conducting system"
+"K622"|"Percutaneous transluminal ablation of atrial wall for atrial flutter"|"opcs"|NA|NA|"percutaneous transluminal ablation of atrial wall for atrial flutter"
+"K623"|"Percutaneous transluminal ablation of conducting system of heart for atrial flutter NEC"|"opcs"|NA|NA|"percutaneous transluminal ablation of conducting system of heart for atrial flutter nec"
+"Q494"|"Endoscopic drilling of ovary"|"opcs"|NA|NA|"endoscopic drilling of ovary"
 "1226.11"|"No FH: Angina"|"read"|1409|9528|"no fh: angina"
 "12C..14"|"FH: Angina"|"read"|2046|13222|"fh: angina"
 "12CF.00"|"FH angina male first degree age unknown"|"read"|5041|40865|"fh angina male first degree age unknown"
@@ -224,4 +224,9 @@ icd9cm|icd10cm|approximate|no_map|combination|scenario|choice_list|icd9|icd10|us
 "4139"|"I25799"|TRUE|FALSE|TRUE|1|2|"4139"|"I257"|FALSE|FALSE
 ')
 
+SAMPLE_GEM[, approximate := as.logical(approximate)]
+SAMPLE_GEM[, no_map := as.logical(no_map)]
+SAMPLE_GEM[, combination := as.logical(combination)]
+SAMPLE_GEM[, use := as.logical(use)]
+SAMPLE_GEM[, from9to10 := as.logical(from9to10)]
 
